# thesis2

./: README.md  aggregate_gtg_seeds.py  aggregate_qi_seeds.py  final_model.pt  pyproject.toml
gtg_logs/: round_001.json  round_002.json  round_003.json  round_004.json  round_005.json
pytorchexample/: client_app.py  gtg_fedavg.py  offline_qi.py  qi_fedavg.py  qi_gtg_fedavg.py  qi_krum.py  server_app.py  task.py  torch_shapley.py
qi_logs/: contributors.json  global_metrics.json  node_id_map.json  offline_qi_scores.json
qi_logs_dirichlet/: contributors.json  global_metrics.json  node_id_map.json
qi_logs_krum/: contributors.json  global_metrics.json  node_id_map.json
qi_vs_gtg/: manifest.json
qi_vs_gtg/seed_00/: run_config.json
qi_vs_gtg/seed_00/gtg/: round_001.json  round_002.json  round_003.json  round_004.json  round_005.json  round_006.json  round_007.json  round_008.json  round_009.json  round_010.json
qi_vs_gtg/seed_00/qi/: contributors.json  global_metrics.json  node_id_map.json  offline_qi_scores.json
qi_vs_gtg/seed_01/: run_config.json
qi_vs_gtg/seed_01/gtg/: round_001.json  round_002.json  round_003.json  round_004.json  round_005.json  round_006.json  round_007.json  round_008.json  round_009.json  round_010.json
qi_vs_gtg/seed_01/qi/: contributors.json  global_metrics.json  node_id_map.json  offline_qi_scores.json
qi_vs_gtg/seed_02/: run_config.json
qi_vs_gtg/seed_02/gtg/: round_001.json  round_002.json  round_003.json  round_004.json  round_005.json  round_006.json  round_007.json  round_008.json  round_009.json  round_010.json
qi_vs_gtg/seed_02/qi/: contributors.json  global_metrics.json  node_id_map.json  offline_qi_scores.json
qi_vs_gtg/seed_03/: run_config.json
qi_vs_gtg/seed_03/gtg/: round_001.json  round_002.json  round_003.json  round_004.json  round_005.json  round_006.json  round_007.json  round_008.json  round_009.json  round_010.json
qi_vs_gtg/seed_03/qi/: contributors.json  global_metrics.json  node_id_map.json  offline_qi_scores.json
qi_vs_gtg/seed_04/: run_config.json
qi_vs_gtg/seed_04/gtg/: round_001.json  round_002.json  round_003.json  round_004.json  round_005.json  round_006.json  round_007.json  round_008.json  round_009.json  round_010.json
qi_vs_gtg/seed_04/qi/: contributors.json  global_metrics.json  node_id_map.json  offline_qi_scores.json
qi_vs_gtg/seed_05/: run_config.json
qi_vs_gtg/seed_05/gtg/: round_001.json  round_002.json  round_003.json  round_004.json  round_005.json  round_006.json  round_007.json  round_008.json  round_009.json  round_010.json
qi_vs_gtg/seed_05/qi/: contributors.json  global_metrics.json  node_id_map.json  offline_qi_scores.json
qi_vs_gtg/seed_06/: run_config.json
qi_vs_gtg/seed_06/gtg/: round_001.json  round_002.json  round_003.json  round_004.json  round_005.json  (+5 more)
qi_vs_gtg/seed_07/: run_config.json
qi_vs_gtg/seed_08/: DONE.json  run_config.json
qi_vs_gtg/seed_09/: run_config.json
qi_vs_gtg/seed_agg/: gtg_scores_mean_std.json
results/qi_noniid_fedprox/: manifest.json
scripts/: run_qi_vs_gtg.py
(+320 files in other folders)
