[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quickstart-pytorch"
version = "1.0.0"
description = "Federated Learning with PyTorch and Flower (Quickstart Example)"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.24.0",
    "flwr-datasets[vision]>=0.5.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "pytorchexample.server_app:app"
clientapp = "pytorchexample.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 5
fraction-evaluate = 0  #normalde ikisi de 0.5 ama debug icin degistiriyom
fraction-train = 0.4
local-epochs = 1
learning-rate = 0.1
batch-size = 32
qi-step = 0.05
qi-out-dir = "qi_logs_dirichlet" #change name for different setups
non-iid = false
dirichlet-alpha = 0.5
partition-seed = 42
attacker-enabled = false
attacker-id = 0        # with 5 clients, 1 attacker = 20% 
flip-prob = 0.2     # 20% of labels flipped
attack-seed = 123         # reproducible
strategy = "fedavg"     # "fedavg" or "fedprox"
fedprox-mu = 0.01 



[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5

[tool.flwr.federations.local-simulation-gpu]
options.num-supernodes = 5
options.backend.client-resources.num-cpus = 2 # each ClientApp assumes to use 2CPUs
options.backend.client-resources.num-gpus = 0.2 # at most 5 ClientApp will run in a given GPU

[tool.flwr.federations.supergrid-deployment]
address = "supergrid.flower.ai"
enable-account-auth = true